--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"start": "nodemon --watch src  -e ts,tsx  --exec yarn build"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.11",
+		"@types/node": "^14.14.35",
 		"esbuild": "^0.9.6",
 		"express": "^4.17.1",
 		"nodemon": "^2.0.7"
