--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
 		"@types/node": "^14.14.35",
 		"esbuild": "^0.9.6",
 		"express": "^4.17.1",
-		"nodemon": "^2.0.7"
+		"nodemon": "^2.0.7",
+		"@types/react": "^17.0.3",
+		"@types/react-router-dom": "^5.1.7"
+	},
+	"dependencies": {
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0"
 	}
 }
