--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 	"devDependencies": {
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.35",
+		"@types/react": "^17.0.3",
+		"@types/react-router-dom": "^5.1.7",
 		"esbuild": "^0.9.6",
 		"express": "^4.17.1",
 		"nodemon": "^2.0.7",
-		"@types/react": "^17.0.3",
-		"@types/react-router-dom": "^5.1.7"
+		"typescript": "^4.2.3"
 	},
 	"dependencies": {
 		"react": "^17.0.1",
