--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
+		"axios": "^0.21.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0"
